# coding_challenge

./: CMakeLists.txt  README.md  messages.json
src/: decode.c  decode.h  main.c  message.c  message.h  parse.c  parse.h  util.c  util.h
